tests/ui/lint/snapshots/infallible_assertion_fires_inside_compound_assert_operand.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Infallible assertion
   ╭─[util.test.lis:4:5]
 3 │   assert {
 4 │     assert true
   ·     ─────┬─────
   ·          ╰── never fails
 5 │     true
   ╰────
  help: This assertion cannot catch a regression. Write a useful assertion · code: [lint.infallible_assertion]
