tests/ui/lint/snapshots/interface_impl_embed_suggests_embed.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Interface embedding uses `embed`
   ╭─[test.lis:7:3]
 6 │ pub interface Person {
 7 │   impl HasName
   ·   ──┬─
   ·     ╰── write `embed` here
 8 │ }
   ╰────
  help: Interfaces embed other interfaces with `embed`. Replace `impl` with `embed` · code: [lint.embed_over_impl]
