tests/ui/lint/snapshots/interface_method_unused_still_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused type
   ╭─[test.lis:6:8]
 5 │ 
 6 │ struct Dog {
   ·        ─┬─
   ·         ╰── never used
 7 │   name: string,
   ╰────
  help: Use or remove this type · code: [lint.unused_type]
