tests/ui/lint/snapshots/interface_string_method_warns.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Miscased name
   ╭─[test.lis:3:6]
 2 │ pub interface Stringer {
 3 │   fn String() -> string
   ·      ───┬──
   ·         ╰── expected snake_case
 4 │ }
   ╰────
  help: Rename to `string` · code: [lint.non_snake_case_function]
